<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_back"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="外卖订单"
            android:layout_centerInParent="true"

            android:textSize="16sp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <RadioGroup
            android:id="@+id/tab_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/white"
            >

            <RadioButton
                android:id="@+id/tab_item1"
                style="@style/TabItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/order_all" />


            <RadioButton
                android:id="@+id/tab_item2"
                style="@style/TabItem"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_ing" />

            <RadioButton
                android:id="@+id/tab_item3"
                style="@style/TabItem"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_wait" />

            <RadioButton
                android:id="@+id/tab_item4"
                style="@style/TabItem"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_pinjia" />
            <RadioButton
                android:id="@+id/tab_item5"
                style="@style/TabItem"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_cancle" />

        </RadioGroup>

        <com.viewpagerindicator.UnderlinePageIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:visibility="gone"
            app:selectedColor="@color/colorPrimary"
            />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>