<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="4dp"
    app:contentPadding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text1"
            style="@style/SmallText"
            android:text="@string/order_num" />

        <TextView
            android:id="@+id/order_num"
            style="@style/SmallText"
            android:layout_toRightOf="@+id/text1"
            android:text="1234563333333" />


        <TextView
            android:id="@+id/time"
            style="@style/SmallText"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/order_num"
            android:gravity="right"
            android:text="2017/05/06 15:30" />


        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/order_num"

            android:layout_marginTop="10dp"

            fresco:roundingBorderWidth="1dp"
            fresco:roundedCornerRadius="180dp"
            fresco:roundingBorderColor="@color/white"
            fresco:roundAsCircle="false" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_num"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/img"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@style/SmallText"

                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/ratingbar"
                style="@style/RadingStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_nearby_shopname"
                android:layout_marginTop="4dp"
                android:isIndicator="true"
                android:numStars="5" />

        </LinearLayout>

        <TextView
            android:id="@+id/connectclient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text1"
            android:background="@drawable/phone"
            android:gravity="center"

            android:textSize="14sp" />

        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:layout_below="@+id/img"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/count"
            style="@style/SmallText"
            android:layout_below="@+id/divider1"
            android:layout_marginTop="5dp"
           />

        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/recycle_list"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_below="@+id/count"-->
            <!--android:layout_marginBottom="5dp" />-->
        <LinearLayout
            android:id="@+id/liner_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/count"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/liner_list_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/list_food_name1"
                    style="@style/SmallText"


                    android:textSize="16sp" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/list_food_num1"
                    style="@style/SmallText"
                    android:layout_below="@+id/text1"

                    android:paddingRight="20dp"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/list_food_price1"
                    style="@style/SmallText"
                    android:layout_below="@+id/text1"
                    android:layout_width="@dimen/action_button_height"

                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/liner_list_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/list_food_name2"
                    style="@style/SmallText"
                    android:layout_below="@+id/text1"

                    android:textSize="16sp" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/list_food_num2"
                    style="@style/SmallText"
                    android:layout_below="@+id/text1"

                    android:paddingRight="20dp"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/list_food_price2"
                    style="@style/SmallText"
                    android:layout_below="@+id/text1"
                    android:layout_width="@dimen/text_width"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>


        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_below="@+id/liner_list"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:id="@+id/liner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider2"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                />

            <TextView
                android:id="@+id/text2"
                style="@style/SmallText"
                android:layout_below="@+id/text1"
                android:text="@string/order_tol"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/money_tol"
                style="@style/SmallText"
                android:layout_below="@+id/text1"
                android:layout_marginRight="10dp"
                android:text="38.00"
                android:textColor="@color/text_red"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/money_num"
                style="@style/SmallText"
                android:layout_below="@+id/text1"

                android:textColor="@color/grey"
                android:textSize="14sp"

                />


        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress"
            style="@style/Progress"
            android:layout_below="@+id/liner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="60" />
        <LinearLayout
            android:id="@+id/liner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/progress_t1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/st_gary"
                android:gravity="center"
                android:textSize="@dimen/text_small2"
                android:text="@string/st_shagnjia" />

            <TextView
                android:id="@+id/progress_t2"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="@dimen/text_small2"
                android:drawableTop="@drawable/st_gary"
                android:text="@string/st_qs1"
                />
            <TextView
                android:id="@+id/progress_t3"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_small2"
                android:gravity="center"
                android:drawableTop="@drawable/st_gary"
                android:text="@string/st_qs2"
                />
            <TextView
                android:id="@+id/progress_t4"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_small2"
                android:gravity="center"
                android:drawableTop="@drawable/st_gary"
                android:text="@string/st_qs3"
                />
            <TextView
                android:id="@+id/progress_t5"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="@dimen/text_small2"
                android:drawableTop="@drawable/st_gary"
                android:text="@string/st_pijia"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner3"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/liner2"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight= "true"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/tx_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"

                android:background="@drawable/bg_connectqs"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tx_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:background="@drawable/bg_ing"
                android:gravity="center"
                />


        </LinearLayout>



    </RelativeLayout>


</android.support.v7.widget.CardView>